# Catalyst-Engine

./: .gitignore
Engine/Binaries/: Print_Options.bat
Engine/Documentation/: .~lock.Catalyst Engine Documentation.odt#  Catalyst Engine Documentation.odt
Engine/Project/: Catalyst Engine.sln  Catalyst Engine180131.vspx
Engine/Resources/: BlueNoiseResourceCollection.crc  CatalystEngineResourceCollection.crc
Engine/Shaders/: AmbientOcclusionApplicationFragmentShader.frag  AmbientOcclusionSpatialDenoisingFragmentShader.frag  AmbientOcclusionTemporalDenoisingFragmentShader.frag  AnimatedModelSceneFeaturesFragmentShader.frag  AnimatedModelSceneFeaturesVertexShader.vert  AxisAlignedBoundingBox3DVertexShader.vert  BloomIsolationFragmentShader.frag  CatalystCloudsCore.glsl  CatalystGeometryMath.glsl  CatalystIndirectLightingCore.glsl  CatalystLightingData.glsl  CatalystMaterialCore.glsl  CatalystModelCore.glsl  CatalystPackingUtilities.glsl  CatalystRayTracingCore.glsl  CatalystRayTracingData.glsl  CatalystRenderingUtilities.glsl  CatalystShaderCommon.glsl  CatalystShaderPhysicallyBasedLighting.glsl  CatalystTerrainUtilities.glsl  CatalystTransparency.glsl  CatalystUserInterfaceCore.glsl  CatalystVegetationCore.glsl  CatalystVegetationUtilities.glsl  CatalystVirtualRealityData.glsl  CatalystWindCore.glsl  ClearFragmentShader.frag  ClearVertexShader.vert  DebugFragmentShader.frag  DebugRenderSphereFragmentShader.frag  DepthDownsampleFragmentShader.frag  DepthOfFieldApplicationFragmentShader.frag  DepthOfFieldBokehBlurFragmentShader.frag  DepthOfFieldFloodFillBlurFragmentShader.frag  DepthOfFieldFloodfillBlurFragmentShader.frag  DepthOfFieldSpatialDenoisingFragmentShader.frag  DirectLightingFragmentShader.frag  (+109 more)
Game/Maxim/Android Studio Project/app/: CMakeLists.txt  build.gradle
Game/Maxim/Android Studio Project/app/src/androidTest/java/com/chrysalisinteractive/maxim/: ExampleInstrumentedTest.java
Game/Maxim/Android Studio Project/app/src/main/: AndroidManifest.xml
Game/Maxim/Android Studio Project/app/src/main/res/values/: strings.xml
Game/Maxim/Android Studio Project/app/src/test/java/com/chrysalisinteractive/maxim/: ExampleUnitTest.java
Micsellaneous/: privacy_policy.md
Miscellaneous/: Acknowledgements.txt
Project/: Catalyst Engine.psess  Catalyst Engine.sln
Templates/: CMakeLists.txt  CMakeLists_Android_Template.txt  CMakeLists_Oculus_Quest_Template.txt  CMakeLists_Win64_Template.txt
Templates/Android/: CMakeLists.txt  Setup Guide.txt
Templates/Android/app/: build.gradle
Templates/Android/app/src/androidTest/java/com/chrysalisinteractive/catalystenginetemplate/: ExampleInstrumentedTest.java
Templates/Android/app/src/main/: AndroidManifest.xml
Templates/Android/app/src/main/cpp/: native-lib.cpp
Templates/Android/app/src/main/java/com/chrysalisinteractive/catalystenginetemplate/: Main.java
Templates/Android/app/src/main/res/layout/: activity_main.xml
Templates/Android/app/src/main/res/values/: strings.xml
Templates/Android/app/src/test/java/com/chrysalisinteractive/catalystenginetemplate/: ExampleUnitTest.java
Templates/Android/gradle/wrapper/: gradle-wrapper.properties
(+4806 files in other folders)
